--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -8,18 +8,65 @@
   font-weight: bold;
   font-size: 20px;
   border: 2px solid var(--border);
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 0;
+  transition: none;
+  outline: none;
+}
+
+.Button_button:hover {
+  border: 2px solid var(--lightBorder);
+}
+
+.Button_button:active {
+  border: 3px solid var(--lightBorder);
+}
+
+.Button_button:focus {
+  outline: none;
 }
 
 .Button_color-darker {
   background-color: var(--darker);
 }
 
+.Button_color-darker:hover {
+  background-color: var(--dark);
+}
+
 .Button_color-dark {
   background-color: var(--dark);
 }
 
+.Button_color-dark:hover {
+  background-color: var(--light);
+}
+
+.Button_color-dark:focus {
+  background-color: var(--light);
+  border: 2px solid var(--lightBorder);
+}
+
 .Button_color-light {
   background-color: var(--light);
+}
+
+.Button_color-light:hover {
+  background-color: var(--lighter);
+}
+
+.Button_color-yellow {
+  grid-row: 5;
+  grid-column: 3 / 5;
+  background-color: #faa307;
+  width: 134px;
+}
+
+.Button_color-yellow:hover {
+  background-color: #f48c06;
+  border: 2px solid var(--lightBorder);
+}
+
+.Button_color-yellow:active {
+  border: 3px solid var(--lightBorder);
 }
